--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5",
+    "vite-plugin-singlefile": "^0.13.5"
   }
 }
