Web Worker + 文件位置改变 + modfile.ts 生成
index.ts 和 main.ts 位置交换注意。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sixprofiler",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/main.js",
   "license": "MIT",
   "dependencies": {
     "jszip": "^3.10.1"
