--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^8.40.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.5",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-singlefile": "^0.13.5"
   }
 }
